--- a/lab/extracred.ipynb
+++ b/lab/extracred.ipynb
@@ -1209,7 +1209,7 @@
    "source": [
     "### Conclusion\n",
     "\n",
-    "This analysis suggests that subjective perceptions — how people feel about their health, their job, and their finances — are far more important predictors of happiness than objective measures like income, education, or hours worked. The strongest correlates of happiness are health, job satisfaction, financial satisfaction, and marital status. These findings are consistent across over 50 years of GSS data and align with the broader psychological literature on subjective well-being. For anyone seeking greater happiness, the data suggest that investing in health, finding meaningful work, and building strong relationships may matter more than maximizing income or credentials."
+    "This analysis suggests that subjective perceptions (how people feel about their health, their job, and their finances) are far more important predictors of happiness than objective measures like income, education, or hours worked. The strongest correlates of happiness are health, job satisfaction, financial satisfaction, and marital status. These findings are definately consistent across over 50 years of GSS data and align with the broader psychological literature on subjective well-being. For anyone seeking greater happiness, the data suggest that investing in health, finding meaningful work, and building strong relationships may matter more than maximizing income or credentials."
    ]
   }
  ],
